First step to fix the tests